[Fixed]mainpage textalign

--- a/src/components/Mainpage/StartButtonBig.css
+++ b/src/components/Mainpage/StartButtonBig.css
@@ -29,6 +29,7 @@
     margin-top: 64px;
     margin-bottom: 0px;
     color: #020203;
+    text-align: center;
 }
 .startBtnBig-innerbox{
     display: flex;
@@ -57,6 +58,7 @@
     color: #3C3C47;
     margin-top: 16px;
     margin-bottom: 0px;
+    text-align: center;
 }
 .startBtnBig-arrow{
     width: 9px;
